testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment4.errors.txt
a.js(6,16): error TS2322: Type 'string' is not assignable to type 'number'.


==== a.js (1 errors) ====
    /**
     * @typedef {number} Foo
     */
    
    /** @type {Foo} */
    export default "";
                   ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    